plugins {
    id 'application'
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.4.20'

    // (Open) JavaFX Gradle plugin.
    id 'org.openjfx.javafxplugin' version '0.0.9'

    // Gradle SSH Plugin.
    // - Plugin which provides remote command execution and file transfer features.
    id 'org.hidetake.ssh' version "2.10.1"

    // Spring Boot plugin.
    id 'org.springframework.boot' version '2.5.2'

}

apply plugin: 'io.spring.dependency-management'


/**
 ******************  JavaFX Configuration ******************
 */

/**
 * Version, group, JAR name (instead of module name).
 */
archivesBaseName = 'iotapp'    // Instead of long name: Plant_Computer_Gateway.jar
group 'hr.unipu'
version ''     // '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

/**
 * Required JavaFX modules.
 * - javafx.web dependency is used by TilesFX.
 */
javafx {
    version = "11.0.2"
    modules = [ 'javafx.controls', 'javafx.web' ]
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib"
    testCompile group: 'junit', name: 'junit', version: '4.12'

    /* uncomment for cross-platform jar: */
    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:win"
    //runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:linux"
    //runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:mac"

    // TilesFX
    // - Maven: https://mvnrepository.com/artifact/eu.hansolo/tilesfx
    // - Github: https://github.com/HanSolo/tilesfx/wiki
    implementation group: 'eu.hansolo', name: 'tilesfx', version: '11.48'


    // Eclipse Paho (Client Mqttv3) - to communicate with an MQTT server.
    // - Maven: https://mvnrepository.com/artifact/org.eclipse.paho/org.eclipse.paho.client.mqttv3
    // - Github: https://github.com/eclipse/paho.mqtt.java
    implementation group: 'org.eclipse.paho', name: 'org.eclipse.paho.client.mqttv3', version: '1.2.5'


    // https://mvnrepository.com/artifact/io.undertow/undertow-core
    implementation group: 'io.undertow', name: 'undertow-core', version: '2.2.8.Final'
    // https://mvnrepository.com/artifact/io.undertow/undertow-servlet
    implementation group: 'io.undertow', name: 'undertow-servlet', version: '2.2.8.Final'
    // https://mvnrepository.com/artifact/io.undertow/undertow-websockets-jsr
    implementation group: 'io.undertow', name: 'undertow-websockets-jsr', version: '2.2.8.Final'


    // Jackson - Java JSON library.
    // - Maven: https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
    // - GitHub: https://github.com/FasterXML/jackson
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'

}


compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

//java {
//    modularity.inferModulePath = true
//}

/**
 * Choosing main class (same for Java and Kotlin code).
 */
application {
    // Java code. Can be either: LedControllerAppJava or LauncherJava. Essential only for 'run' task.
    mainClassName = 'hr.unipu.LauncherJava'
    //mainClassName = 'hr.unipu.FoodComputerControllerApplicationJava'

    // Kotlin code.  (FoodComputerControllerApp if class and filename are not the same).
    //mainClassName = 'hr.unipu.FoodComputerControllerApplication'
}

/**
 * Because some file encoding errors - (čžš etc.).
 */
compileJava.options.encoding = 'UTF-8'
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

/**
 * Remote host.
 */
remotes {
    rpi01 {
        host = '192.168.15.241'   // or VG: '192.168.5.10', ZG: '192.168.0.17', Ethernet: '192.168.3.2', 'raspberrypi.local'
        user = 'pi'     // pi
        password = 'Nevi123!'  //raspberry
    }
}

/**
 * Create Fat Jar.
 */
// - Execution failed for task ':app:jar'.
//   Entry module-info.class is a duplicate but no duplicate handling strategy has been set.

// Generating Fat Jar.
bootJar {
    enabled = true
}

// Generates plain jar.
jar {
    enabled = false
    duplicatesStrategy = DuplicatesStrategy.WARN

    manifest {
        attributes 'Main-Class': 'hr.unipu.LauncherJava'    // package.myMainClassName
        //attributes 'Main-Class': 'hr.unipu.FoodComputerControllerApplicationJava'    // package.myMainClassName
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

/**
 * Deploy task.
 */
task deploy {
    //dependsOn 'jar'       // Generates "-plain" jar. (Spring Boot)
    dependsOn 'bootJar'     // Generates Fat jar. (Spring Boot)
    doLast {
        ssh.settings {
            knownHosts = allowAnyHosts
        }
        ssh.run {
            session(remotes.rpi01) {
                // Testing
                println("Root direktorij je: ${project.rootDir}")
                println("Projektni direktorij je: ${project.projectDir}")
                println("Build direktorij je: ${project.buildDir}")
                println("Gradle direktorij je: ${project.rootDir}\\.gradle")


                // Copy within working computer.
                copy {
                    exclude "**/.gradle/**"
                    exclude "**/Food_Computer_Gateway/**"
                    from "${project.rootDir}"
                    into "$buildDir/Food_Computer_Gateway"
                }

                // Remove old RPi project first.
                remove '/home/pi/Documents/JAVA-KOTLIN/Food_Computer_Gateway'


                // Deploy at RPi.
                put from: "$buildDir/Food_Computer_Gateway",
                    into: "/home/pi/Documents/JAVA-KOTLIN"


                // Execute (not working remotely).
                //execute 'chmod +x ./gradlew'
                //execute './gradlew run'


                // Run Jar at Rpi.
                execute "pwd"
                // Not possible to run JavaFX from Gradle (Unable to open DISPLAY). Need to run it from RPi.
                //execute "java -jar /home/pi/Documents/JAVA-KOTLIN/Food_Computer_Gateway/app/build/libs/app.jar"

            }
        }
    }
}

/**
 * Print classpath (for JShell).
 */
task printClasspath {
    doLast {
        println sourceSets.main.runtimeClasspath.asPath
    }
}



/**
 ******************  JPro: Java Configuration ******************
 */
/*
apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'com.google.osdetector'
apply plugin: 'org.openjfx.javafxplugin'

javafx {
    version = "11.0.2"
    modules = [ 'javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.web' ]
}

dependencies {
    implementation "com.sandec.jpro:jpro-web-core:0.8.1"
}


compileJava {
    sourceCompatibility = 11
    targetCompatibility = 11
}

ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os

//dependencies {
//    // Add your dependencies here, for example:
//    // compile group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'
//    compile "org.openjfx:javafx-base:17.0.1:$platform"
//    compile "org.openjfx:javafx-graphics:17.0.1:$platform"
//    compile "org.openjfx:javafx-controls:17.0.1:$platform"
//    compile "org.openjfx:javafx-fxml:17.0.1:$platform"
//    compile "org.openjfx:javafx-media:17.0.1:$platform"
//    compile "org.openjfx:javafx-web:17.0.1:$platform"
//}


//compileJava {
//    doFirst {
//        options.compilerArgs = [
//                '--module-path', classpath.asPath,
//                '--add-modules', 'javafx.fxml,javafx.controls'
//        ]
//    }
//}


//run {
//    doFirst {
//        jvmArgs = [
//                '--module-path', classpath.asPath,
//                '--add-modules', 'javafx.fxml,javafx.controls'
//        ]
//    }
//}

 */


/**
 ******************  JPro Configuration ******************
 */
/*
apply plugin: 'com.sandec.jpro'
 */

/**
 * App Main Class
 */
//mainClassName = 'com.jpro.hellojpro.HelloJPro'
//mainClassName = 'com.jpro.hellojpro.HelloJProFXML'
/*
mainClassName = 'hr.unipu.LauncherJava'
*/

/**
 * jpro settings
 */

/*
jpro {
    // for debugging
    // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'

    JVMArgs << '-Xmx1000m'

    //jpro server port
    port = 8080

}
*/